--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.ai.navigation": "2.0.7",
     "com.unity.ide.rider": "3.0.36",
     "com.unity.inputsystem": "1.14.0",
+    "com.unity.localization": "1.5.4",
     "com.unity.render-pipelines.universal": "17.1.0",
     "com.unity.timeline": "1.8.8",
     "com.unity.ugui": "2.0.0",
