--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.ai.navigation": "2.0.7",
+    "com.unity.cinemachine": "3.1.3",
     "com.unity.ide.rider": "3.0.36",
     "com.unity.inputsystem": "1.14.0",
     "com.unity.localization": "1.5.4",
